update to be compatible for `wails init` generation

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,7 +18,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "@/wailsjs": ["./wailsjs/*"]
+      "@/wailsjs/*": ["./wailsjs/*"]
     }
   },
   "include": ["src"],
